# SLog

./: .clang-format  .gitignore  CMakeLists.txt  CMakePreset.json  CMakePresets.json  LICENSE  README.md  conanfile.py  logger.hpp
.github/: CODEOWNERS
.github/workflows/: ci.yml  linux.yml  macos.yml  tests.yml  windows.yml
docker/: Dockerfile  d.ps1  d.py  d.sh
docs/: coding_style.md  compile_time_options.md  design_spec.md  format_flags.md  policies_reference.md  queue_design.md  roadmap.md  testing_strategy.md  wiki_plan.md
docs/architecture/: design_spec.md  requirements.md  topic_concurrency.md  topic_formatting.md
example/: main.cpp
examples/: CMakeLists.txt
examples/basic_logging/: main.cpp
examples/console_sink/: main.cpp
examples/file_sink/: main.cpp
examples/log_levels/: main.cpp
examples/multi_sink/: main.cpp
examples/set_pattern/: main.cpp
include/: slogger.hpp
include/slog/: common.hpp  config.hpp  config_macros.hpp  slog.hpp
include/slog/async/: async_op.hpp  common.hpp  mpsc_queue.hpp  policies.hpp  worker.hpp
include/slog/core/: format_with_location.hpp  log_level.hpp  log_proxy.hpp  log_record.hpp  logger.hpp  registry.hpp
include/slog/details/: deref.hpp  filesystem.hpp  macros.hpp  thread_id.hpp  time.hpp
include/slog/details/core/: log_proxy.ipp  logger.ipp  registry.ipp
include/slog/details/sinks/: stream_sink.ipp
include/slog/fmt/: deferred_format.hpp  format_context.hpp  format_flags.hpp  format_with_location.hpp  pattern_formatter.hpp
include/slog/impl/core/: log_proxy.ipp  logger.ipp  registry.ipp
include/slog/impl/fmt/: pattern_formatter.ipp
include/slog/impl/sinks/: stream_sink.ipp
include/slog/sinks/: common.hpp  console_sink.hpp  file_sink.hpp  isink.hpp  sink_manager.hpp  stream_sink.hpp
scripts/: clang_format.py  setup_hooks.bat  setup_hooks.py  setup_hooks.sh  update_badge.ps1  update_badge.py  update_badge.sh
src/: slog_lib.cpp
tests/: CMakeLists.txt  README.md  conanfile.py
tests/src/: log_levels.cpp
tests/src/async/: async_test.cpp  async_vector_sink.hpp
tests/src/dynamic_linking/: static_instance_test.cpp  validation_plugin.cpp
tests/src/fmt/: deferred_format.cpp  format_flags.cpp  pattern_formatter.cpp
tests/src/mpsc_queue/: common.hpp  multi_thread_tests.cpp  single_thread_tests.cpp
tests/src/sinks/: console_sink.cpp
